--- a/project-2-start/package.json
+++ b/project-2-start/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.0",
     "axios": "^0.24.0",
     "bulma": "^0.9.3",
     "eslint": "^7",
@@ -11,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "sass": "^1.43.2"
+    "sass": "^1.43.2",
+    "tailwindcss": "^2.2.17"
   },
   "scripts": {
     "start": "react-scripts start",
